--- a/index.html
+++ b/index.html
@@ -123,9 +123,14 @@
                 font-size: x-small;
             }
         }
-        @media (max-width: 320px) {
+        @media (max-width: 370px) {
             html {
                 font-size: xx-small;
+                padding: 15px;
+            }
+        }
+        @media (max-width: 325px) {
+            html {
                 padding: 10px;
             }
         }
