--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <span>Dmitry Mikhalkov</span>
             &ndash;
             <span>contact
-            <a href="https://trainymonked.github.io/me" target="_blank">@trainymonked</a>
-            everywhere</span>
+                <a href="https://trainymonked.github.io/me" target="_blank">@trainymonked</a>
+                everywhere</span>
         </div>
         <div>
-            <div class="updated">Last updated: Nov 30, 2022</div>
+            <div class="updated">Last updated: Feb 17, 2023</div>
             <div class="download">
                 <a href="Dmitry Mikhalkov.pdf" download="Dmitry Mikhalkov.pdf">Save as PDF</a>
             </div>
@@ -27,7 +27,7 @@
     </header>
 
     <section class="briefly">
-        <p class="title">Frontend Developer <span class="type">&ndash; 2 years of experience</span></p>
+        <p class="title">Frontend Developer <span class="type">with 2 years of experience</span></p>
         <p>22 years old, Bachelor of Engineering</p>
         <p>Gomel, Belarus | Ready for relocation</p>
     </section>
@@ -37,7 +37,7 @@
             <summary>Military Service</summary>
             <div class="project">
                 <div class="timeline">
-                    Nov 2021 - Nov 3, 2022
+                    Nov 2021 - Nov 2022
                     <br>1 year
                 </div>
                 <div>
@@ -57,7 +57,7 @@
     <section class="mil__print">
         <div class="project">
             <div class="timeline">
-                Nov 2021 - Nov 3, 2022
+                Nov 2021 - Nov 2022
                 <br>1 year
             </div>
             <div>
@@ -82,16 +82,18 @@
         </div>
         <div>
             <div class="title">Frontend React Developer</div>
-            <div class="client">🏢 IBA feat. TAMM</div>
-            <div class="description">Full-time employment. English only. <br>The client had a government website full of services for Abu Dhabi. Every business or individual user can i.e. issue or modify a license using an easy to use UI in just about 6 minutes instead of going to the office and waiting in line, etc.</div>
+            <div class="client">🏢 IBA</div>
+            <div class="description">Full-time employment. English only. <br>The client had a government website full of
+                services for a large city. Every business or individual user can i.e. issue or modify a license using an
+                easy to use UI in just about 6 minutes instead of going to the office and waiting in line, etc.</div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
-                <p>- Frontend developing with React.js and Redux (using internal IDE - Workbench)</p>
+                <p>- Frontend developing (using internal IDE based on React/Redux + TS)</p>
                 <p>- Extending business logic</p>
                 <p>- Investigating and fixing bugs</p>
                 <p>- Daily Scrum meetings in English</p>
                 <p class="project__heading">Tech Stack:</p>
-                <p>Workbench IDE (based on React.js), TypeScript, React.js, Redux, Git (GitLab), Jira, Confluence.</p>
+                <p>TypeScript, React.js, Redux, Git (GitLab), Jira, Confluence.</p>
             </div>
         </div>
     </section>
@@ -104,7 +106,10 @@
         <div>
             <div class="title">Frontend React Developer</div>
             <div class="client">🏢 IBA feat. Visual Flow</div>
-            <div class="description">Part-time employment. At first - internal project. <br>Visual Flow is a low code ETL solution designed for effective data manipulation via convenient and user-friendly interface. The tool can integrate data from different sources (DB2, COS, Elastic Search), perform data processing and transformation, leverage metadata for analysis and maintenance.</div>
+            <div class="description">Part-time employment. At first - internal project. <br>Visual Flow is a low code
+                ETL solution designed for effective data manipulation via convenient and user-friendly interface. The
+                tool can integrate data from different sources (DB2, COS, Elastic Search), perform data processing and
+                transformation, leverage metadata for analysis and maintenance.</div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
                 <p>- Frontend developing with React.js and Redux</p>
@@ -126,8 +131,11 @@
         <div>
             <div class="title">Fullstack (MERN) Developer</div>
             <div class="client">🎓 University Project - Graduate Work</div>
-            <div class="description">Careers tab for a company website. <br>This project is about careers (vacancies) tab on a company website. There are 2 types of access in this project: read-only access for everyone, and full access for administrators.
-                Everyone can see the list of careers. Administrators can add, edit, and remove careers from the database using admin panel on the website.</div>
+            <div class="description">Careers tab for a company website. <br>This project is about careers (vacancies)
+                tab on a company website. There are 2 types of access in this project: read-only access for everyone,
+                and full access for administrators.
+                Everyone can see the list of careers. Administrators can add, edit, and remove careers from the database
+                using admin panel on the website.</div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
                 <p>- Application Design</p>
@@ -149,7 +157,8 @@
         <div>
             <div class="title">Frontend/JS Trainee</div>
             <div class="client">🏢 IBA</div>
-            <div class="description">Professional training on internal projects by mentors - employees of the company</div>
+            <div class="description">Professional training on internal projects by mentors - employees of the company
+            </div>
             <div class="responsibilities">
                 <p class="project__heading">Goals Achieved:</p>
                 <p>- Learned fundamentals of React.js, Redux, TypeScript, Unit-testing, Angular, Node.js</p>
@@ -177,7 +186,7 @@
     </section>
 
     <section class="pets">
-        <p>Check some of my pet projects on GitHub -
+        <p>Check some of my pet projects hosted on GitHub -
             <a href="https://trainymonked.github.io" target="_blank"
                 rel="noopener noreferrer">trainymonked.github.io</a>
         </p>
@@ -186,12 +195,12 @@
     <section class="skills">
         <b>Professional skills:</b>
         <p>- HTML5, CSS3, JavaScript (ECMAScript 5 and later)</p>
-        <p>- React.js, Redux</p>
+        <p>- React.js, Redux, TypeScript</p>
         <p>- Node.js, Express.js, MongoDB, JWT, bcrypt.js</p>
         <!-- <p>- JEST, Karma, Jasmine</p> -->
         <p>- Git, GitHub, GitLab, Gerrit, Jira</p>
-        <!-- <p>- Adaptive websites from design mock-ups</p> -->
-        <!-- <p>- Angular, TypeScript, TinyMCE</p> -->
+        <p>- Responsive websites from design mock-ups</p>
+        <!-- <p>- Angular, TinyMCE</p> -->
         <!-- <p>- OOP, MVC, REST API</p> -->
     </section>
 </body>
